trying to fix overflow y issue

--- a/css/app.css
+++ b/css/app.css
@@ -647,7 +647,6 @@ p {
     top: -40%;
     transform: skewY(-5deg);
     z-index: 1;
-    overflow: hidden;
 }
 
 #sessions-logo {
@@ -962,7 +961,7 @@ p {
     /* NAVBAR */
 
     .navbar {
-        margin: 0 0 var(--spacing-lg) 0;
+        margin: var(--spacing-sm) 0 var(--spacing-lg) 0;
     }
 
     /* HERO STYLES */
@@ -1122,4 +1121,5 @@ html, body {
     width: 100%;
     position: relative;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
